--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/rafiindraj/Express#readme",
   "dependencies": {
-    "validator": "^13.6.0"
+    "chalk": "^4.1.2",
+    "validator": "^13.6.0",
+    "yargs": "^17.1.1"
   }
 }
